# slint-example

./: Cargo.toml  build.rs
lang/zh_CN/LC_MESSAGES/: vehicle-tool.po
src/: lib.rs  main.rs  ui.rs
ui/: app.slint  global.slint  login.slint  main.slint
ui/components/: grid-layout.slint  group-box.slint  navigation.slint  prelude.slint  settings.slint  userinfo.slint
ui/globals/: context.slint  interface.slint  prelude.slint  structs.slint
ui/windows/: login-window.slint  main-window.slint  prelude.slint
