[package]
name = "vehicle-tool"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "lib_vehicle_tool"

[[bin]]
name = "vehicle-tool"
path = "src/main.rs"

[dependencies]
log = "0.4"
tracing = "0.1"
anyhow = "1"
thiserror = "2"

slint = "1.10"

[build-dependencies]
anyhow = "1"
slint-build = "1.10"
